# stocks_forecasting

./: .gitignore  pyproject.toml
nb/: exponential_smoothing.ipynb  poc_separate_models.ipynb  price_component_analysis.ipynb
nb/stock-price-prediction-challenge/: EDA_Feature_Engineering.ipynb  NN.ipynb  Regression.ipynb  XGBoost.ipynb  data.py  data_challenge.py  models.py  models_challenge.py
nb/world-stock-prices-daily-updating/: exponential_smoothing.ipynb  poc_global_linreg.ipynb  poc_global_linreg_multistep.ipynb  poc_global_xgboost_multistep.ipynb  price_component_analysis.ipynb
src/: data.py  models.py  style.py  utils.py  vis.py
