[project]
name = "stocks-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "opendatasets>=0.1.22",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "statsmodels>=0.14.5",
]
