[project]
name = "stocks-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "opendatasets>=0.1.22",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.0",
    "scikit-optimize>=0.10.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.19.0",
    "xgboost>=3.0.2",
]
